# image-scraper

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  conditioner.rs  download.rs  gallery.rs  imgur.rs  main.rs  reddit.rs  url_builder.rs
src/cli/: handlers.rs  opt.rs
src/imgur/: imgur.rs  random.rs  url_builder.rs
src/imgur/models/: album.rs
src/models/: album.rs  image.rs  image_post.rs
src/reddit/: query_options.rs  reddit.rs  url_builder.rs
src/reddit/models/: listing.rs
