[package]
name = "image-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
rand = "0.8.4"
image = "0.23.14"
png = "0.17.2"
structopt = "0.3"
scraper = "0.12.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
enum-utils = "0.1.2"
